# mmcs

./: .gitignore  CMakeLists.txt  README.md  TooltipWindow.cpp  TooltipWindow.hpp  changelog.txt  polyglot_build.bat  wWinMain.cpp
cmake/: ChangelogHandler.cmake  CreateCResources.cmake  FindOpenSSL.in.cmake  MSVCParallelBuild.cmake  MSVCStaticLibs.cmake
mmcshelper_webextension/: background.js  manifest.json  options.html
src/: README.md  gen_win32.in.manifest  gen_win32_resource.in.h  gen_win32_resource.in.rc  mmcs_ChangelogOpener.cpp  mmcs_ChangelogOpener.hpp  mmcs_DataDirectories.cpp  mmcs_DataDirectories.hpp  mmcs_GetDirectoryFiles.cpp  mmcs_GetDirectoryFiles.hpp  mmcs_MediaScaling.cpp  mmcs_MediaScaling.hpp  mmcs_NativeMessaging.cpp  mmcs_NativeMessaging.hpp  mmcs_Open.cpp  mmcs_Open.hpp  mmcs_OpenUrl.cpp  mmcs_OpenUrl.hpp  mmcs_ScopedFree.hpp  mmcs_SelectFilesWindow.cpp  mmcs_SelectFilesWindow.hpp  mmcs_StringHelpers.cpp  mmcs_StringHelpers.hpp  mmcs_WindowSettings.cpp  mmcs_WindowSettings.hpp  mmcs_file.cpp  mmcs_file.hpp  mmcs_formatting.c  mmcs_formatting.h  mmcs_globals.cpp  mmcs_globals.hpp  mmcs_main.cpp  mmcs_os.h  mmcs_os.hpp  mmcs_sleep.c  mmcs_sleep.cpp  mmcs_sleep.h  mmcs_sleep.hpp  mmcs_unicode.cpp  mmcs_unicode.hpp  (+25 more)
